--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
+  <p>"Gros zizi"</p>
 </body>
 </html>
