--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Titre de la page</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
 </body>
