--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
+  <p>
+    zizi
+  </p>
 </body>
 </html>
