--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Titre de la page</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paragraphe Animé</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            overflow: hidden;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        p {
+            font-size: 24px;
+            line-height: 1.5;
+            color: #333;
+            cursor: pointer;
+        }
+        span {
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
-  <p>
-    zizi
-  </p>
+    <div class="container">
+        <p>Voici mon paragraphe animé. C'est vraiment trop stylé !</p>
+    </div>
+    <script>
+        // Insérez ici le code JavaScript fourni précédemment
+    </script>
 </body>
 </html>
