--- a/index.html
+++ b/index.html
@@ -3,213 +3,218 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principes de Design Web</title>
+    <title>ÉcoVert - Votre Jardinerie en Ligne</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+        :root {
+            --primary-color: #4CAF50;
+            --secondary-color: #45a049;
+            --text-color: #333;
+            --background-color: #f4f4f4;
+            --white: #ffffff;
+        }
+
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        }
+
         .container {
             width: 80%;
-            margin: auto;
+            margin: 0 auto;
             overflow: hidden;
-            padding: 20px;
         }
+
+        /* Hiérarchie visuelle */
         header {
-            background: #35424a;
-            color: #ffffff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #e8491d 3px solid;
+            background-color: var(--primary-color);
+            color: var(--white);
+            padding: 1rem 0;
         }
+
         header h1 {
-            margin: 0;
-            text-align: center;
-            font-size: 2.5em;
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
         }
-        .principle {
-            background: #fff;
-            margin: 20px 0;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+        nav ul {
+            list-style: none;
+            display: flex;
         }
-        .principle h2 {
-            color: #e8491d;
-            margin-top: 0;
+
+        nav ul li {
+            margin-right: 1rem;
         }
-        .example {
-            margin-top: 15px;
-            padding: 15px;
-            background: #f9f9f9;
-            border-radius: 5px;
-        }
-        .cta {
-            display: inline-block;
-            background: #e8491d;
-            color: #fff;
-            padding: 10px 20px;
+
+        nav ul li a {
+            color: var(--white);
             text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
         }
-        .grid {
+
+        /* Proportions divines */
+        .hero {
+            height: 61.8vh;
+            background: url('https://images.unsplash.com/photo-1466692476868-aef1dfb1e735') center/cover no-repeat;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: var(--white);
+        }
+
+        .hero h2 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        /* Loi de Hick et Espace blanc */
+        .products {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
+            gap: 2rem;
+            padding: 4rem 0;
         }
-        .grid-item {
-            background: #ddd;
-            padding: 20px;
+
+        .product {
+            background-color: var(--white);
+            padding: 1rem;
+            border-radius: 5px;
             text-align: center;
         }
-        .golden-ratio {
-            width: 61.8%;
-            margin: 20px auto;
-            background: #ddd;
+
+        .product img {
+            width: 100%;
             height: 200px;
-            position: relative;
-        }
-        .golden-ratio::after {
-            content: '';
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 61.8%;
-            height: 100%;
-            background: #bbb;
-        }
-        #addPrinciple {
-            display: block;
-            width: 200px;
-            margin: 20px auto;
-            padding: 10px;
-            background-color: #35424a;
-            color: #fff;
-            border: none;
+            object-fit: cover;
             border-radius: 5px;
-            cursor: pointer;
+            margin-bottom: 1rem;
         }
-        #addPrinciple:hover {
-            background-color: #2c3840;
+
+        /* Loi de Fitts */
+        .cta {
+            display: inline-block;
+            background-color: var(--primary-color);
+            color: var(--white);
+            padding: 0.5rem 1rem;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 1rem;
+        }
+
+        .cta:hover {
+            background-color: var(--secondary-color);
+        }
+
+        /* Règle des tiers */
+        .about {
+            display: flex;
+            align-items: center;
+            padding: 4rem 0;
+        }
+
+        .about-image {
+            flex: 1;
+            height: 400px;
+            background: url('https://images.unsplash.com/photo-1416879595882-3373a0480b5b') center/cover no-repeat;
+        }
+
+        .about-text {
+            flex: 2;
+            padding: 0 2rem;
+        }
+
+        /* Lois de la Gestalt */
+        footer {
+            background-color: var(--primary-color);
+            color: var(--white);
+            text-align: center;
+            padding: 1rem 0;
+            margin-top: 2rem;
+        }
+
+        /* Rasoir d'Occam */
+        @media (max-width: 768px) {
+            .products {
+                grid-template-columns: 1fr;
+            }
+
+            .about {
+                flex-direction: column;
+            }
+
+            .about-image {
+                width: 100%;
+                height: 200px;
+                margin-bottom: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Principes de Design Web</h1>
+        <div class="container">
+            <h1>ÉcoVert</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Accueil</a></li>
+                    <li><a href="#products">Produits</a></li>
+                    <li><a href="#about">À propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <div class="container">
-        <div id="principlesContainer">
-            <div class="principle">
-                <h2>Hiérarchie visuelle</h2>
-                <p>Mettez en avant les éléments importants et utilisez la taille, la couleur et le positionnement pour créer une hiérarchie claire.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <h1>Titre principal</h1>
-                    <h2>Sous-titre</h2>
-                    <p>Texte normal</p>
-                    <a href="#" class="cta">Appel à l'action</a>
-                </div>
-            </div>
+    <section class="hero" id="home">
+        <div class="container">
+            <h2>Cultivez votre passion pour les plantes</h2>
+            <a href="#products" class="cta">Découvrir nos produits</a>
+        </div>
+    </section>
 
-            <div class="principle">
-                <h2>Proportions divines</h2>
-                <p>Utilisez le nombre d'or (1,618) pour créer des proportions agréables visuellement.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <div class="golden-ratio"></div>
-                </div>
+    <section class="products" id="products">
+        <div class="container">
+            <div class="product">
+                <img src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d" alt="Plante d'intérieur">
+                <h3>Plantes d'intérieur</h3>
+                <p>Ajoutez une touche de verdure à votre espace de vie.</p>
+                <a href="#" class="cta">Acheter</a>
             </div>
-
-            <div class="principle">
-                <h2>Loi de Hick</h2>
-                <p>Limitez les choix pour faciliter la prise de décision.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <select>
-                        <option>Option 1</option>
-                        <option>Option 2</option>
-                        <option>Option 3</option>
-                    </select>
-                </div>
+            <div class="product">
+                <img src="https://images.unsplash.com/photo-1416879595882-3373a0480b5b" alt="Plante d'extérieur">
+                <h3>Plantes d'extérieur</h3>
+                <p>Embellissez votre jardin avec nos variétés résistantes.</p>
+                <a href="#" class="cta">Acheter</a>
             </div>
-
-            <div class="principle">
-                <h2>Règle des tiers</h2>
-                <p>Divisez les images en 9 parties égales et placez les éléments importants sur les lignes ou à leurs intersections.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <div style="width: 300px; height: 200px; background: #ddd; position: relative;">
-                        <div style="position: absolute; top: 33%; left: 33%; width: 10px; height: 10px; background: red; border-radius: 50%;"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="principle">
-                <h2>Lois de la Gestalt</h2>
-                <p>Utilisez la proximité, la similarité et la symétrie pour créer des ensembles cohérents.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <div class="grid">
-                        <div class="grid-item">1</div>
-                        <div class="grid-item">2</div>
-                        <div class="grid-item">3</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="principle">
-                <h2>Espace blanc</h2>
-                <p>Utilisez l'espace blanc pour créer un design "propre" et lisible.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <p style="margin: 20px; padding: 20px; background: #fff;">Ceci est un exemple de texte avec beaucoup d'espace blanc autour.</p>
-                </div>
+            <div class="product">
+                <img src="https://images.unsplash.com/photo-1509587584298-0f3b3a3a1797" alt="Accessoires de jardinage">
+                <h3>Accessoires</h3>
+                <p>Tout ce dont vous avez besoin pour prendre soin de vos plantes.</p>
+                <a href="#" class="cta">Acheter</a>
             </div>
         </div>
+    </section>
 
-        <button id="addPrinciple">Ajouter un principe</button>
-    </div>
+    <section class="about" id="about">
+        <div class="about-image"></div>
+        <div class="about-text">
+            <h2>À propos d'ÉcoVert</h2>
+            <p>Chez ÉcoVert, nous sommes passionnés par les plantes et l'environnement. Notre mission est de vous aider à créer des espaces verts magnifiques, que ce soit à l'intérieur ou à l'extérieur. Nous proposons une large gamme de plantes de haute qualité et des conseils d'experts pour vous aider à réussir votre jardin.</p>
+        </div>
+    </section>
 
-    <script>
-        const addPrincipleBtn = document.getElementById('addPrinciple');
-        const principlesContainer = document.getElementById('principlesContainer');
-        let principleCount = 6;
-
-        addPrincipleBtn.addEventListener('click', function() {
-            principleCount++;
-            const newPrinciple = document.createElement('div');
-            newPrinciple.className = 'principle';
-            newPrinciple.innerHTML = `
-                <h2>Nouveau Principe ${principleCount}</h2>
-                <p>Cliquez pour modifier la description du principe.</p>
-                <div class="example">
-                    <h3>Exemple :</h3>
-                    <p>Cliquez pour ajouter un exemple.</p>
-                </div>
-            `;
-            principlesContainer.appendChild(newPrinciple);
-
-            newPrinciple.querySelector('p').addEventListener('click', function(e) {
-                const newText = prompt('Modifiez la description du principe:', e.target.textContent);
-                if (newText !== null) {
-                    e.target.textContent = newText;
-                }
-            });
-
-            newPrinciple.querySelector('.example p').addEventListener('click', function(e) {
-                const newText = prompt('Ajoutez un exemple:', e.target.textContent);
-                if (newText !== null) {
-                    e.target.textContent = newText;
-                }
-            });
-        });
-    </script>
+    <footer id="contact">
+        <div class="container">
+            <p>&copy; 2024 ÉcoVert. Tous droits réservés.</p>
+            <p>Contact : info@ecovert.com | Tél : 01 23 45 67 89</p>
+        </div>
+    </footer>
 </body>
 </html>
