--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Plant Paradise Logo">
+            <img src="favicon1.jpg" alt="Plant Paradise Logo">
             <h1>Plant Paradise</h1>
         </div>
         <nav>
