--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <h2>Featured Plants</h2>
             <div class="product-grid">
                 <div class="product">
-                    <img src="fiddle-leaf-fig.jpg" alt="Fiddle Leaf Fig">
+                    <img src="fiddleleaf.jpeg" alt="Fiddle Leaf Fig">
                     <h3>Fiddle Leaf Fig</h3>
                     <p class="price">$29.99</p>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="product">
-                    <img src="snake-plant.jpg" alt="Snake Plant">
+                    <img src="snakeplant.jpg" alt="Snake Plant">
                     <h3>Snake Plant</h3>
                     <p class="price">$39.99</p>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="product">
-                    <img src="peace-lily.jpg" alt="Peace Lily">
+                    <img src="peacelilly.jpg" alt="Peace Lily">
                     <h3>Peace Lily</h3>
                     <p class="price">$34.99</p>
                     <button class="add-to-cart">Add to Cart</button>
@@ -58,7 +58,7 @@
         <section id="about">
             <h2>About Us</h2>
             <p>At Plant Paradise, we believe in bringing nature to your home. We offer a wide variety of plants suited for all environments, from indoor to outdoor.</p>
-            <img src="about-us.jpg" alt="Our Team" class="about-image">
+            <img src="favicon1.jpg" alt="Our Team" class="about-image">
         </section>
 
         <section id="contact">
