--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <h2>Featured Plants</h2>
             <div class="product-grid">
                 <div class="product">
-                    <img src="fiddleleaf.jpeg" alt="Fiddle Leaf Fig">
+                    <img src="fiddleleaf.jpeg" alt="Fiddle Leaf Fig" class="product-image">
                     <h3>Fiddle Leaf Fig</h3>
                     <p class="price">$29.99</p>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="product">
-                    <img src="snakeplant.jpg" alt="Snake Plant">
+                    <img src="snakeplant.jpg" alt="Snake Plant" class="product-image">
                     <h3>Snake Plant</h3>
                     <p class="price">$39.99</p>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="product">
-                    <img src="peacelilly.jpg" alt="Peace Lily">
+                    <img src="peacelilly.jpg" alt="Peace Lily" class="product-image">
                     <h3>Peace Lily</h3>
                     <p class="price">$34.99</p>
                     <button class="add-to-cart">Add to Cart</button>
@@ -65,7 +65,7 @@
             <h2>Contact Us</h2>
             <p>Email: info@plantparadise.com</p>
             <p>Phone: (555) 123-4567</p>
-            <form>
+            <form id="contact-form">
                 <input type="text" placeholder="Your Name" required>
                 <input type="email" placeholder="Your Email" required>
                 <textarea placeholder="Your Message" required></textarea>
