--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="social-icons">
             <a href="#" class="social-icon">Facebook</a>
             <a href="#" class="social-icon">Instagram</a>
-            <a href="#" class="social-icon">Twitter</a>
+            <a href="https://x.com/lepenjm" class="social-icon">Twitter</a>
         </div>
     </footer>
 
