--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <footer>
         <p>&copy; 2024 Plant Paradise. All rights reserved.</p>
         <div class="social-icons">
-            <a href="https://www.facebook.com/JordanBardella/?locale=fr_FR" class="social-icon">Facebook</a>
-            <a href="https://www.instagram.com/marine_lepen/?hl=fr" class="social-icon">Instagram</a>
+            <a href="https://www.facebook.com/JordanBardella" class="social-icon">Facebook</a>
+            <a href="https://www.instagram.com/marine_lepen" class="social-icon">Instagram</a>
             <a href="https://x.com/lepenjm" class="social-icon">Twitter</a>
         </div>
     </footer>
