--- a/index.html
+++ b/index.html
@@ -77,11 +77,16 @@
     <footer>
         <p>&copy; 2024 Plant Paradise. All rights reserved.</p>
         <div class="social-icons">
-            <a href="https://www.facebook.com/JordanBardella" class="social-icon">Facebook</a>
-            <a href="https://www.instagram.com/marine_lepen" class="social-icon">Instagram</a>
-            <a href="https://x.com/lepenjm" class="social-icon">Twitter</a>
+            <a href="#" class="social-icon">Facebook</a>
+            <a href="#" class="social-icon">Instagram</a>
+            <a href="#" class="social-icon">Twitter</a>
         </div>
     </footer>
+
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
 
     <script src="script.js"></script>
 </body>
