--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
     <main>
         <section id="hero">
-            <h2>Bring Nature Indoors</h2>
-            <p>Discover our wide selection of beautiful plants for your home and garden.</p>
-            <a href="#featured" class="cta-button">Shop Now</a>
+            <div class="hero-content">
+                <h2>Bring Nature Indoors</h2>
+                <p>Discover our wide selection of beautiful plants for your home and garden.</p>
+                <a href="#featured" class="cta-button">Shop Now</a>
+            </div>
         </section>
 
         <section id="featured">
